codes/pc/use-antlr/target/generated-sources/antlr/org/sharpx/parser/antlr/JpVocabularyParser.java
// $ANTLR 3.0.1 /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g 2014-08-31 17:40:35

package org.sharpx.parser.antlr;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class JpVocabularyParser extends BaseParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "NEWLINE", "ANMALI", "AQIUSEIDEN", "MANRINOQIOJIO", "KOI", "FTILDE", "WADAXI", "Pronun", "Writing", "PartOfSpeech", "Expl", "Suffix1", "Suffix2", "Suffix3", "HINA", "KATA", "LPA", "JPCHAR", "DIGIT", "ALPHA", "WRT_PUNC", "RPA", "LBR", "KANJI", "RBR", "PUNC", "GRM_PUNC", "WS"
    };
    public static final int FTILDE=9;
    public static final int HINA=18;
    public static final int KOI=8;
    public static final int Expl=14;
    public static final int KANJI=27;
    public static final int RBR=28;
    public static final int ANMALI=5;
    public static final int LPA=20;
    public static final int AQIUSEIDEN=6;
    public static final int EOF=-1;
    public static final int LBR=26;
    public static final int ALPHA=23;
    public static final int KATA=19;
    public static final int WRT_PUNC=24;
    public static final int Pronun=11;
    public static final int WS=31;
    public static final int GRM_PUNC=30;
    public static final int NEWLINE=4;
    public static final int PUNC=29;
    public static final int MANRINOQIOJIO=7;
    public static final int WADAXI=10;
    public static final int Suffix3=17;
    public static final int Suffix1=15;
    public static final int Suffix2=16;
    public static final int JPCHAR=21;
    public static final int Writing=12;
    public static final int RPA=25;
    public static final int DIGIT=22;
    public static final int PartOfSpeech=13;

        public JpVocabularyParser(TokenStream input) {
            super(input);
        }
        

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "/home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g"; }


      private String emptyIfNull(String str){
        if(str==null){
          return "";
        }else
          return str;
      };



    // $ANTLR start voclist
    // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:31:1: voclist : ( ( vocabulary )? NEWLINE )+ ;
    public final void voclist() throws RecognitionException {
        vocabulary_return vocabulary1 = null;


        try {
            // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:32:5: ( ( ( vocabulary )? NEWLINE )+ )
            // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:32:7: ( ( vocabulary )? NEWLINE )+
            {
            System.out.println("<html><head></head><body><table>");
                   System.out.println("<tr><td>pronun</td><td>writing</td>"+
                   "<td>part of speech</td><td>explanation</td></tr>");
                  
            // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:36:7: ( ( vocabulary )? NEWLINE )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( ((LA2_0>=NEWLINE && LA2_0<=Pronun)||(LA2_0>=Expl && LA2_0<=Suffix3)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:36:8: ( vocabulary )? NEWLINE
            	    {
            	    // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:36:8: ( vocabulary )?
            	    int alt1=2;
            	    int LA1_0 = input.LA(1);

            	    if ( ((LA1_0>=ANMALI && LA1_0<=Pronun)||(LA1_0>=Expl && LA1_0<=Suffix3)) ) {
            	        alt1=1;
            	    }
            	    switch (alt1) {
            	        case 1 :
            	            // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:36:9: vocabulary
            	            {
            	            pushFollow(FOLLOW_vocabulary_in_voclist71);
            	            vocabulary1=vocabulary();
            	            _fsp--;


            	                  System.out.println("<tr><td>"+emptyIfNull(vocabulary1.pronun)+
            	                    "</td><td>"+emptyIfNull(vocabulary1.writing)+"</td><td>"+
            	                    emptyIfNull(vocabulary1.partOfSpeech)+
            	                    "</td><td>"+emptyIfNull(vocabulary1.expl)+"</td></tr>");
            	                  

            	            }
            	            break;

            	    }

            	    match(input,NEWLINE,FOLLOW_NEWLINE_in_voclist76); 

            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);

            System.out.println("</table></body></html>");

            }

        }

          catch (RecognitionException e) {
              reportError(e);
        //    throw e;
          }
        finally {
        }
        return ;
    }
    // $ANTLR end voclist

    public static class vocabulary_return extends ParserRuleReturnScope {
        public String pronun;
        public String writing;
        public String partOfSpeech;
        public String expl;
    };

    // $ANTLR start vocabulary
    // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:45:1: vocabulary returns [String pronun, String writing, String partOfSpeech, String expl] : ( word | suffix1 | suffix2 | prefix | aNMALI | aQIUSEIDEN | mANRINOQIOJIO | kOI | jIOU | wADAXI );
    public final vocabulary_return vocabulary() throws RecognitionException {
        vocabulary_return retval = new vocabulary_return();
        retval.start = input.LT(1);

        word_return word2 = null;

        String suffix13 = null;

        suffix2_return suffix24 = null;

        String prefix5 = null;

        aNMALI_return aNMALI6 = null;

        aQIUSEIDEN_return aQIUSEIDEN7 = null;

        mANRINOQIOJIO_return mANRINOQIOJIO8 = null;

        kOI_return kOI9 = null;

        jIOU_return jIOU10 = null;

        wADAXI_return wADAXI11 = null;


        try {
            // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:46:5: ( word | suffix1 | suffix2 | prefix | aNMALI | aQIUSEIDEN | mANRINOQIOJIO | kOI | jIOU | wADAXI )
            int alt3=10;
            switch ( input.LA(1) ) {
            case Pronun:
                {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==NEWLINE||(LA3_1>=Writing && LA3_1<=Expl)) ) {
                    alt3=1;
                }
                else if ( (LA3_1==FTILDE) ) {
                    alt3=4;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("45:1: vocabulary returns [String pronun, String writing, String partOfSpeech, String expl] : ( word | suffix1 | suffix2 | prefix | aNMALI | aQIUSEIDEN | mANRINOQIOJIO | kOI | jIOU | wADAXI );", 3, 1, input);

                    throw nvae;
                }
                }
                break;
            case Suffix1:
                {
                alt3=2;
                }
                break;
            case Suffix2:
            case Suffix3:
                {
                alt3=3;
                }
                break;
            case Expl:
                {
                alt3=4;
                }
                break;
            case ANMALI:
                {
                alt3=5;
                }
                break;
            case AQIUSEIDEN:
                {
                alt3=6;
                }
                break;
            case MANRINOQIOJIO:
                {
                alt3=7;
                }
                break;
            case KOI:
                {
                alt3=8;
                }
                break;
            case FTILDE:
                {
                alt3=9;
                }
                break;
            case WADAXI:
                {
                alt3=10;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("45:1: vocabulary returns [String pronun, String writing, String partOfSpeech, String expl] : ( word | suffix1 | suffix2 | prefix | aNMALI | aQIUSEIDEN | mANRINOQIOJIO | kOI | jIOU | wADAXI );", 3, 0, input);

                throw nvae;
            }

            switch (alt3) {
                case 1 :
                    // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:46:7: word
                    {
                    pushFollow(FOLLOW_word_in_vocabulary111);
                    word2=word();
                    _fsp--;

                    retval.pronun =word2.pronun;
                            retval.writing =word2.writing;
                            retval.partOfSpeech =word2.partOfSpeech;
                            retval.expl =word2.expl;
                          

                    }
                    break;
                case 2 :
                    // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:52:7: suffix1
                    {
                    pushFollow(FOLLOW_suffix1_in_vocabulary127);
                    suffix13=suffix1();
                    _fsp--;

                    retval.pronun =suffix13;
                          

                    }
                    break;
                case 3 :
                    // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:55:7: suffix2
                    {
                    pushFollow(FOLLOW_suffix2_in_vocabulary144);
                    suffix24=suffix2();
                    _fsp--;

                    retval.pronun =suffix24.pronun;
                            retval.writing =suffix24.writing;
                          

                    }
                    break;
                case 4 :
                    // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:59:7: prefix
                    {
                    pushFollow(FOLLOW_prefix_in_vocabulary161);
                    prefix5=prefix();
                    _fsp--;

                    retval.pronun =prefix5;
                          

                    }
                    break;
                case 5 :
                    // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:62:7: aNMALI
                    {
                    pushFollow(FOLLOW_aNMALI_in_vocabulary177);
                    aNMALI6=aNMALI();
                    _fsp--;

                    retval.pronun =aNMALI6.pronun;
                            retval.writing =aNMALI6.writing;
                            retval.partOfSpeech =aNMALI6.partOfSpeech;
                            retval.expl =aNMALI6.expl;
                          

                    }
                    break;
                case 6 :
                    // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:68:7: aQIUSEIDEN
                    {
                    pushFollow(FOLLOW_aQIUSEIDEN_in_vocabulary193);
                    aQIUSEIDEN7=aQIUSEIDEN();
                    _fsp--;

                    retval.pronun =aQIUSEIDEN7.pronun;
                            retval.writing =aQIUSEIDEN7.writing;
                            retval.partOfSpeech =aQIUSEIDEN7.partOfSpeech;
                            retval.expl =aQIUSEIDEN7.expl;
                          

                    }
                    break;
                case 7 :
                    // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:74:7: mANRINOQIOJIO
                    {
                    pushFollow(FOLLOW_mANRINOQIOJIO_in_vocabulary209);
                    mANRINOQIOJIO8=mANRINOQIOJIO();
                    _fsp--;

                    retval.pronun =mANRINOQIOJIO8.pronun;
                            retval.writing =mANRINOQIOJIO8.writing;
                            retval.partOfSpeech =mANRINOQIOJIO8.partOfSpeech;
                            retval.expl =mANRINOQIOJIO8.expl;
                          

                    }
                    break;
                case 8 :
                    // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:80:7: kOI
                    {
                    pushFollow(FOLLOW_kOI_in_vocabulary225);
                    kOI9=kOI();
                    _fsp--;

                    retval.pronun =kOI9.pronun;
                            retval.writing =kOI9.writing;
                            retval.partOfSpeech =kOI9.partOfSpeech;
                            retval.expl =kOI9.expl;
                          

                    }
                    break;
                case 9 :
                    // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:86:7: jIOU
                    {
                    pushFollow(FOLLOW_jIOU_in_vocabulary241);
                    jIOU10=jIOU();
                    _fsp--;

                    retval.pronun =jIOU10.pronun;
                            retval.writing =jIOU10.writing;
                            retval.partOfSpeech =jIOU10.partOfSpeech;
                            retval.expl =jIOU10.expl;
                          

                    }
                    break;
                case 10 :
                    // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:92:7: wADAXI
                    {
                    pushFollow(FOLLOW_wADAXI_in_vocabulary257);
                    wADAXI11=wADAXI();
                    _fsp--;

                    retval.pronun =wADAXI11.pronun;
                            retval.writing =wADAXI11.writing;
                            retval.partOfSpeech =wADAXI11.partOfSpeech;
                            retval.expl =wADAXI11.expl;
                          

                    }
                    break;

            }
            retval.stop = input.LT(-1);

        }

          catch (RecognitionException e) {
              reportError(e);
        //    throw e;
          }
        finally {
        }
        return retval;
    }
    // $ANTLR end vocabulary

    public static class aNMALI_return extends ParserRuleReturnScope {
        public String pronun;
        public String writing;
        public String partOfSpeech;
        public String expl;
    };

    // $ANTLR start aNMALI
    // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:103:1: aNMALI returns [String pronun, String writing, String partOfSpeech, String expl] : ANMALI ;
    public final aNMALI_return aNMALI() throws RecognitionException {
        aNMALI_return retval = new aNMALI_return();
        retval.start = input.LT(1);

        try {
            // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:104:5: ( ANMALI )
            // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:104:7: ANMALI
            {
            match(input,ANMALI,FOLLOW_ANMALI_in_aNMALI289); 
            retval.pronun ="\u3042\u3093\u307E\u308A";
                    retval.partOfSpeech ="\uFF08\u526F\uFF09";
                    retval.expl ="\u592A\uFF0C\u975E\u5E38\uFF0C\u8FC7\u4E8E";
                  

            }

            retval.stop = input.LT(-1);

        }

          catch (RecognitionException e) {
              reportError(e);
        //    throw e;
          }
        finally {
        }
        return retval;
    }
    // $ANTLR end aNMALI

    public static class aQIUSEIDEN_return extends ParserRuleReturnScope {
        public String pronun;
        public String writing;
        public String partOfSpeech;
        public String expl;
    };

    // $ANTLR start aQIUSEIDEN
    // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:111:1: aQIUSEIDEN returns [String pronun, String writing, String partOfSpeech, String expl] : AQIUSEIDEN ;
    public final aQIUSEIDEN_return aQIUSEIDEN() throws RecognitionException {
        aQIUSEIDEN_return retval = new aQIUSEIDEN_return();
        retval.start = input.LT(1);

        try {
            // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:112:5: ( AQIUSEIDEN )
            // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:112:7: AQIUSEIDEN
            {
            match(input,AQIUSEIDEN,FOLLOW_AQIUSEIDEN_in_aQIUSEIDEN322); 
            retval.pronun ="\u3042\u30AD\u30E5\u30FC\u305B\u3044\u3067\u3093";
                    retval.writing ="\uFF08\u963FQ\u6B63\u4F1D\uFF09";
                    retval.partOfSpeech ="\uFF3B\u4E13\uFF3D";
                    retval.expl ="\u963FQ\u6B63\u4F20";
                  

            }

            retval.stop = input.LT(-1);

        }

          catch (RecognitionException e) {
              reportError(e);
        //    throw e;
          }
        finally {
        }
        return retval;
    }
    // $ANTLR end aQIUSEIDEN

    public static class mANRINOQIOJIO_return extends ParserRuleReturnScope {
        public String pronun;
        public String writing;
        public String partOfSpeech;
        public String expl;
    };

    // $ANTLR start mANRINOQIOJIO
    // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:120:1: mANRINOQIOJIO returns [String pronun, String writing, String partOfSpeech, String expl] : MANRINOQIOJIO ;
    public final mANRINOQIOJIO_return mANRINOQIOJIO() throws RecognitionException {
        mANRINOQIOJIO_return retval = new mANRINOQIOJIO_return();
        retval.start = input.LT(1);

        try {
            // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:121:5: ( MANRINOQIOJIO )
            // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:121:7: MANRINOQIOJIO
            {
            match(input,MANRINOQIOJIO,FOLLOW_MANRINOQIOJIO_in_mANRINOQIOJIO351); 
            retval.pronun ="\u3070\u3093\u308A\u306E\u3061\u3087\u3046\u3058\u3087\u3046";
                    retval.writing ="\uFF08\u4E07\u91CC\u306E\u9577\u57CE\uFF09";
                    retval.partOfSpeech ="\u3014\u4E13\u3015";
                    retval.expl ="\u4E07\u91CC\u957F\u57CE";
                  

            }

            retval.stop = input.LT(-1);

        }

          catch (RecognitionException e) {
              reportError(e);
        //    throw e;
          }
        finally {
        }
        return retval;
    }
    // $ANTLR end mANRINOQIOJIO

    public static class kOI_return extends ParserRuleReturnScope {
        public String pronun;
        public String writing;
        public String partOfSpeech;
        public String expl;
    };

    // $ANTLR start kOI
    // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:129:1: kOI returns [String pronun, String writing, String partOfSpeech, String expl] : KOI ;
    public final kOI_return kOI() throws RecognitionException {
        kOI_return retval = new kOI_return();
        retval.start = input.LT(1);

        try {
            // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:130:5: ( KOI )
            // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:130:7: KOI
            {
            match(input,KOI,FOLLOW_KOI_in_kOI384); 
            retval.pronun ="\u3053\u3044";
                    retval.writing ="\uFF08\u6FC3\u3044\uFF09";
                    retval.partOfSpeech ="\u3014\u5F621\u3015";
                    retval.expl ="\uFF08\u53E3\u5473\uFF09\u91CD\uFF1B\u6D53";
                  

            }

            retval.stop = input.LT(-1);

        }

          catch (RecognitionException e) {
              reportError(e);
        //    throw e;
          }
        finally {
        }
        return retval;
    }
    // $ANTLR end kOI

    public static class jIOU_return extends ParserRuleReturnScope {
        public String pronun;
        public String writing;
        public String partOfSpeech;
        public String expl;
    };

    // $ANTLR start jIOU
    // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:138:1: jIOU returns [String pronun, String writing, String partOfSpeech, String expl] : FTILDE ;
    public final jIOU_return jIOU() throws RecognitionException {
        jIOU_return retval = new jIOU_return();
        retval.start = input.LT(1);

        try {
            // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:139:5: ( FTILDE )
            // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:139:7: FTILDE
            {
            match(input,FTILDE,FOLLOW_FTILDE_in_jIOU417); 
            retval.pronun ="\u3058\u3087\u3046";
                    retval.writing ="\uFF08\u4E0A\uFF09";
                  

            }

            retval.stop = input.LT(-1);

        }

          catch (RecognitionException e) {
              reportError(e);
        //    throw e;
          }
        finally {
        }
        return retval;
    }
    // $ANTLR end jIOU

    public static class wADAXI_return extends ParserRuleReturnScope {
        public String pronun;
        public String writing;
        public String partOfSpeech;
        public String expl;
    };

    // $ANTLR start wADAXI
    // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:145:1: wADAXI returns [String pronun, String writing, String partOfSpeech, String expl] : WADAXI ;
    public final wADAXI_return wADAXI() throws RecognitionException {
        wADAXI_return retval = new wADAXI_return();
        retval.start = input.LT(1);

        try {
            // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:146:5: ( WADAXI )
            // /home/he/work/code-repo/github/codes/pc/use-antlr/src/main/antlr/org/sharpx/parser/antlr/JpVocabulary.g:146:7: WADAXI
            {
            match(input,WADAXI,FOLLOW_WADAXI_in_wADAXI450); 
            retval.pronun ="\u308F\u305F\u3057";
                    retval.partOfSpeech ="\u3014\u4EE3\u3015";
                    retval.expl ="\u6211";
                  

            }

            retval.stop = input.LT(-1);

        }

          catch (RecognitionException e) {
              reportError(e);
        //    throw e;
          }
        finally {
        }
        return retval;
    }
    // $ANTLR end wADAXI
